objects/Commission_Paid_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commission_Paid_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annualized_Premium_Dollar_Tier_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 1 Annualized Premium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annualized_Premium_Dollar_Tier_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 2 Annualized Premium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annualized_Premium_Dollar_Tier_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 3 Annualized Premium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPP_Delivery_Channel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Incentive_Cap_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Incentive Cap Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <description>US32274</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Paid_People__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission Paid People</label>
        <referenceTo>Commission_Paid_People__c</referenceTo>
        <relationshipLabel>Commission Paid Products</relationshipLabel>
        <relationshipName>Commission_Paid_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_of_Guarantee__c</fullName>
        <description>US32274</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Year of Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_of_Guarantee__c</fullName>
        <description>US32774</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Duration of Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Essential_Formulary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US32274</description>
        <label>Essential Formulary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Business_Unit__c</fullName>
        <description>US32274</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GL Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible__c</fullName>
        <description>US32274</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Commissions_Request_Type__c</fullName>
        <description>US32274</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal Commissions Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Commissions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Commissions</label>
        <referenceTo>Internal_Commission__c</referenceTo>
        <relationshipName>Commission_Paid_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US32274</description>
        <label>Mail Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiplier_Percentage__c</fullName>
        <formula>Commission_Paid_People__r.Multiplier_Percentage__c</formula>
        <label>Multiplier Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Effective_Date__c</fullName>
        <formula>Commission_Paid_People__r.Opportunity_Effective_Date__c</formula>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Product_Calculated_Payment_Tier_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 1 Payment Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Product_Calculated_Payment_Tier_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 2 Payment Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Product_Calculated_Payment_Tier_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 3 Payment Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Product_Comp_Rate_Tier_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 1 Payment Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Product_Comp_Rate_Tier_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 2 Payment Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Product_Comp_Rate_Tier_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 3 Payment Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_People_Owner_Name__c</fullName>
        <formula>Commission_Paid_People__r.Owner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid People Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prem_Product_Calculated_Payment_Tier_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 1 Premium Rate Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prem_Product_Calculated_Payment_Tier_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 2 Premium Rate Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prem_Product_Calculated_Payment_Tier_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 3 Premium Rate Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Comp_Rate_Tier_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 1 Premium Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Comp_Rate_Tier_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 2 Premium Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Comp_Rate_Tier_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tier 3 Premium Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proration_Percentage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Proration Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Members_Validated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QLI Members Validated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Parent_Bundle_Name__c</fullName>
        <description>US32274</description>
        <encryptionScheme>None</encryptionScheme>
        <label>QLI Parent Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Product_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QLI Product Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QLI Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLI_Subscribers_Validated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QLI Subscribers Validated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>R90__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US32274</description>
        <label>R90</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REP_Factor_Percentage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>REP Factor Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Choice_Tiered_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US32274</description>
        <label>RX Choice Tiered Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US32274</description>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smart_90__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US32274</description>
        <label>Smart 90</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Commission_Paid_People__r.Role__c</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Comp_Amount_For_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Comp Amount For Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_Renew_With_Growth_Members__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validated Renew With Growth Members</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commission Paid Products</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Commission Paid Products Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Paid Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>